--- a/src/pages/Blogs/Blogs.module.scss
+++ b/src/pages/Blogs/Blogs.module.scss
@@ -5,4 +5,51 @@
     justify-content: center;
     width: 100vw;
     min-height: 100vh;
+
+    .innerCont {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        .h1 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+        }
+
+        .blogListParent {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .blogCont {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+
+                .arrangement {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-around;
+                    flex-wrap: wrap;
+
+                    .blogCard {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        flex-direction: column;
+                        border: 1px solid #ffffff;
+                        border-radius: 1rem;
+                        padding: 1rem;
+                        margin: 1rem;
+                    }
+                }
+            }
+        }
+    }
 }
